fix the issue with the alignment in the order service, added the SOTN table for UNI
Issue-ID: USECASEUI-387

--- a/usecaseui-portal/src/app/views/services/sotn-management/order-service/order-service.component.less
+++ b/usecaseui-portal/src/app/views/services/sotn-management/order-service/order-service.component.less
@@ -57,3 +57,24 @@ nz-table
     color: var(--on-primary);
 }
 
+.tableStyle {
+    width: 92%;
+    margin-left: 4%;
+    margin-right: 4%;
+    margin-top: 2%;
+    border: 2px solid lightgray;
+
+    tr {
+        th {
+            color: white;
+            background: lightgray;
+            // text-align: center;
+            // margin: 5px;
+            padding: 12px 8px;
+        }
+        td {
+            // border: 1px solid lightgray;
+            padding: 12px 8px;
+        }
+    }
+}
